# xsens_mti_ros_driver

./: .gitignore  CMakeLists.txt  package.xml
lib/xspublic/xscontroller/: dotdevice.dpp  iointerfacefile.h
param/: xsens_mti_node.yaml
src/: main.cpp  xdacallback.cpp  xdacallback.h  xdainterface.cpp  xdainterface.h
src/messagepublishers/: accelerationpublisher.h  angularvelocitypublisher.h  eulerpublisher.h  freeaccelerationpublisher.h  gnsspublisher.h  imupublisher.h  magneticfieldpublisher.h  orientationincrementspublisher.h  orientationpublisher.h  packetcallback.h  positionllapublisher.h  pressurepublisher.h  rawaccelerationpublisher.h  rawangularvelocitypublisher.h  rawmagneticfieldpublisher.h  temperaturepublisher.h  timereferencepublisher.h  transformpublisher.h  twistpublisher.h  velocityincrementpublisher.h
srv/: DataRecord.srv  SendCalibration.srv  SetLLA.srv
