<?xml version="1.0"?>
<package format="2">
  <name>xsens_mti_driver</name>
  <version>1.0.0</version>
  <description>ROS driver for Xsens MTi IMU sensors</description>
  <maintainer email="support@xsens.com">Xsens</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
